feat: add keyboard shortcuts modal and functionality
This commit adds a new keyboard shortcuts modal and binds it to "?" shortcut. The modal displays a table of available keyboard shortcuts and their corresponding actions. The keyboard shortcuts are implemented using the Mousetrap library. The modal is triggered by pressing the "?" key.

Fixes #5064

--- a/weblate/static/styles/main.css
+++ b/weblate/static/styles/main.css
@@ -2114,3 +2114,16 @@ tbody.warning {
 .daterangepicker {
   border: var(--border) !important;
 }
+
+#shortcuts-table-container {
+  max-height: 60vh;
+  overflow-y: auto;
+}
+
+#shortcuts-table-container #t-head {
+  font-weight: bold;
+}
+
+#shortcuts-table-container kbd {
+  color: unset;
+}
