--- a/weblate/templates/base.html
+++ b/weblate/templates/base.html
@@ -378,6 +378,7 @@ var _rollbarConfig = {
     </div>
   </div>
 </div>
+{% include 'keyboard-shortcuts.html' %}
 {% include 'footer.html' %}
  </body>
 </html>
