Fix keyboard shortcuts modal accessibility
updated the ID of the keyboard shortcuts modal to "shortcutsModal" for better accessibility

Fixes #5064

--- a/weblate/templates/keyboard-shortcuts.html
+++ b/weblate/templates/keyboard-shortcuts.html
@@ -16,7 +16,7 @@
         <button type="button" class="close" data-dismiss="modal" aria-label="{% trans " Close" %}">
           <span aria-hidden="true">&times;
         </button>
-        <h4 class="panel-title">{% trans "Available Shortcuts" %}</h4>
+        <h4 id="shortcutsModal" class="panel-title">{% trans "Available Shortcuts" %}</h4>
       </div>
       <div class="modal-body" id="shortcuts-table-container">
         <table class="table table-striped">
