--- a/weblate/templates/accounts/user.html
+++ b/weblate/templates/accounts/user.html
@@ -328,14 +328,14 @@
         </div>
         <div class="panel-body">
           {% if page_user.profile.has_2fa %}
-            {% trans "User has two-factor authentication configured." %}
+            {% trans "The user has two-factor authentication configured." %}
           {% else %}
-            {% trans "User doesn't have two-factor authentication configured." %}
+            {% trans "The user doesn't have two-factor authentication configured." %}
           {% endif %}
         </div>
         {% if page_user.profile.has_2fa %}
           <div class="panel-footer">
-            <input type="submit" name="remove_2fa" value="{% trans "Disable two-factor authentication" %}" class="btn-danger red">
+            <input type="submit" name="remove_2fa" value="{% trans "Turn off        two-factor authentication" %}" class="btn-danger red">
           </div>
         {% endif %}
       </div>
