--- a/weblate/templates/accounts/profile.html
+++ b/weblate/templates/accounts/profile.html
@@ -430,7 +430,7 @@
   <div class="panel-heading"><h4 class="panel-title">{% documentation_icon 'api' right=True %}{% trans "API access" %}</h4></div>
 <table class="table">
 <tr><td colspan="2">
-    <p>{% blocktrans %}You can control Weblate using the HTTP REST API, and your API key is used to authenticate to it.{% endblocktrans %}</p>
+    <p>{% blocktrans %}Your your API key can be used to control Weblate via the HTTP REST API.{% endblocktrans %}</p>
 </td></tr>
 <tr>
 <th>{% trans "Your personal API key:" %}</th>
