--- a/weblate/templates/accounts/profile.html
+++ b/weblate/templates/accounts/profile.html
@@ -300,7 +300,7 @@
   <div class="panel-body">
     {% crispy profileform %}
     <p class="help-block">
-      {% blocktrans %}All fields on this page are optional and can be deleted at any time. By filling them out, you are consent to their use wherever your user profile appears.{% endblocktrans %}
+      {% blocktrans %}All fields on this page are optional and can be deleted at any time. By filling them out, you allow to their use wherever your user profile appears.{% endblocktrans %}
     </p>
   </div>
   <div class="panel-footer">
