--- a/weblate/templates/addons/addon_list.html
+++ b/weblate/templates/addons/addon_list.html
@@ -53,7 +53,7 @@
   </table>
   <div class="panel-footer">
     {% if scope == "sitewide" %}
-      {% trans "Add-ons can be installed on project and component scope as well." %}
+      {% trans "Add-ons can be also be installed on project- and component level." %}
     {% endif %}
     {% if scope == "component" %}
       <a href="{% url 'addons' path=object.project.get_url_path %}" class="btn btn-primary">
