--- a/weblate/templates/translate.html
+++ b/weblate/templates/translate.html
@@ -230,7 +230,7 @@
       {% elif project_locked %}
         title="{% trans "This translation is currently locked." %}"
       {% elif unit.readonly %}
-        title="{% trans "Read only" %}"
+        title="{% trans "Read-only" %}"
       {% endif %}
     >{% icon "suggest.svg" %} {% trans "Suggest" %}</button>
     {% endif %}
