Add scroll-x only for the  table in project info
Closes: #9998

--- a/weblate/static/style-bootstrap.css
+++ b/weblate/static/style-bootstrap.css
@@ -551,8 +551,8 @@ form + .login-label {
   height: 20px;
 }
 
-.table {
-  display: table;
+#information .table {
+  display: block;
   overflow-x: auto;
 }
 
