--- a/weblate/templates/snippets/meta-css.html
+++ b/weblate/templates/snippets/meta-css.html
@@ -12,7 +12,8 @@
   {% endif %}
   <link rel="stylesheet" href="{% static 'vendor/multi.css' %}{{ cache_param }}" />
   <link rel="stylesheet" href="{% static 'styles/new-language.css' %}{{ cache_param }}" />
-  <link rel="stylesheet" href="{% static 'style-bootstrap.css' %}{{ cache_param }}" />
+  <link rel="stylesheet" href="{% static 'styles/variables.css' %}{{ cache_param }}" />
+  <link rel="stylesheet" href="{% static 'styles/main.css' %}{{ cache_param }}" />
   <link rel="stylesheet" href="{% static 'daterangepicker.css' %}{{ cache_param }}" />
 {% if theme == "auto" %}
   <link rel="stylesheet" href="{% static 'style-dark.css' %}{{ cache_param }}" media="(prefers-color-scheme: dark)" />
