Modernize dropdown menu
addede a new style for the dropdown menu to remove the border and apply a border-radius using the variable --border-radius.

--- a/weblate/static/styles/main.css
+++ b/weblate/static/styles/main.css
@@ -2100,3 +2100,8 @@ tbody.warning {
 .totp-qr svg path {
   fill: black !important;
 }
+
+.dropdown-menu {
+  border: none;
+  border-radius: var(--border-radius);
+}
