--- a/weblate/static/styles/main.css
+++ b/weblate/static/styles/main.css
@@ -2127,3 +2127,34 @@ tbody.warning {
 #shortcuts-table-container kbd {
   color: unset;
 }
+
+#search-preview {
+  display: none;
+  width: 100%;
+  min-height: 40px;
+  max-height: 200px;
+  background: white;
+  padding: 5px;
+  border-radius: 4px;
+  border: 1px solid #ccc;
+  border-top: none;
+  overflow-y: auto;
+  box-shadow: 1px 2px 4px #00000020;
+}
+
+#search-preview > #search-result {
+  display: block;
+  padding: 5px;
+  margin-bottom: 5px;
+  text-decoration: none;
+  color: inherit;
+  border-radius: 4px;
+}
+
+#search-preview > #search-result:hover {
+  background-color: #cccccc50;
+}
+
+#search-preview > #search-result > div {
+  margin-left: 10px;
+}
