--- a/weblate/templates/base.html
+++ b/weblate/templates/base.html
@@ -77,6 +77,7 @@ var _rollbarConfig = {
   <script defer data-cfasync="false" src="{% static 'vendor/moment.js' %}{{ cache_param }}"></script>
   <script defer data-cfasync="false" src="{% static 'vendor/daterangepicker.js' %}{{ cache_param }}"></script>
   <script defer data-cfasync="false" src="{% static 'js/keyboard-shortcuts.js' %}{{ cache_param }}"></script>
+  <script defer data-cfasync="false" src="{% static 'editor/tools/search.js' %}{{ cache_param }}"></script>
 {% endcompress %}
 
 {% block extra_script %}
