--- a/weblate/templates/base.html
+++ b/weblate/templates/base.html
@@ -112,7 +112,7 @@ var _rollbarConfig = {
  <body {% if LANGUAGE_BIDI %}class="dir-rtl"{% endif %}>
  <div id="popup-alerts"></div>
  <header>
-<nav class="navbar navbar-default navbar-static-top navbar-inverse" role="navigation">
+<nav class="navbar navbar-default navbar-static-top" role="navigation">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
