--- a/weblate/static/styles/main.css
+++ b/weblate/static/styles/main.css
@@ -58,8 +58,27 @@
 }
 
 .navbar {
-  margin-bottom: 0;
+  margin-bottom: 10px;
+  padding: 2px 0;
   border: none;
+}
+
+.navbar-default {
+  background-color: unset;
+  box-shadow: var(--box-shadow);
+}
+
+.navbar-default * {
+  color: var(--text-color) !important;
+}
+
+.navbar .dropdown .dropdown-toggle {
+  border: 1px solid transparent;
+}
+
+.navbar .dropdown.open .dropdown-toggle {
+  border-radius: var(--border-radius);
+  border: var(--border);
 }
 
 .navbar-toggle {
@@ -101,6 +120,10 @@ h1 {
   margin-top: 0;
 }
 
+input {
+  border-radius: var(--border-radius) !important;
+}
+
 .main-content {
   margin: 15px;
 }
@@ -120,6 +143,7 @@ h1 {
 
 .progress-bar {
   box-shadow: none;
+  border-radius: var(--border-radius);
 }
 
 .progress-bar-dark {
@@ -155,7 +179,7 @@ h1 {
 }
 
 .chart-progress .progress-bar-success {
-  background-color: #2eccaa;
+  background-color: var(--color-primary);
 }
 
 .nav-pills {
@@ -633,7 +657,7 @@ form + .login-label {
   gap: 5px;
   padding: 4px;
   background-color: #fff;
-  box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.1);
+  box-shadow: var(--box-shadow);
   border-radius: 5px;
   position: absolute;
   right: 15px;
@@ -680,7 +704,7 @@ form + .login-label {
 }
 
 kbd {
-  border: 1px solid #bfc3c7;
+  border: var(--border);
   -webkit-box-shadow: none;
   box-shadow: none;
   font-size: 14px;
@@ -1023,17 +1047,19 @@ th.number {
 
 .nav-pills > li > a,
 .btn-default {
-  color: #1fa385;
+  color: #000000;
 }
 
 .nav-pills > li > a {
   font-weight: 600;
   border: 1px solid transparent;
+  border-radius: var(--border-radius);
 }
 
 .nav-pills > .active > a,
 .nav > .active > a:hover {
-  border: 1px solid #144d3f;
+  border: var(--border);
+  background-color: #fff;
 }
 
 .nav-pills > li > a:hover,
@@ -1041,7 +1067,13 @@ th.number {
 .nav-pills .open > a,
 .nav-pills .open > a:hover,
 .nav-pills .open > a:focus {
-  border: 1px solid #e9eaec;
+  border: var(--border);
+}
+
+.navbar-default .navbar-nav > .open > a,
+.navbar-default .navbar-nav > .open > a:hover,
+.navbar-default .navbar-nav > .open > a:focus {
+  background: none;
 }
 
 .btn-default:hover,
@@ -1051,6 +1083,13 @@ th.number {
 .nav-pills .open > a:hover,
 .nav-pills .open > a:focus {
   color: #144d3f;
+  background: none;
+}
+
+.nav-pills > li.active > a,
+.nav-pills > li.active > a:hover,
+.nav-pills > li.active > a:focus {
+  color: var(--color-primary);
   background: none;
 }
 
@@ -1159,7 +1198,7 @@ thead th {
 }
 
 .btn-info {
-  border: 1px solid #2eccaa;
+  border: 1px solid var(--color-primary);
 }
 
 .btn-link {
@@ -1172,9 +1211,15 @@ thead th {
   line-height: 10px;
 }
 
-.navbar a path {
-  fill: #bfc3c7;
+.navbar .navbar-brand path {
+  fill: var(--color-primary);
 }
+
+.navbar a path,
+.navbar .caret {
+  fill: #757779;
+}
+
 .navbar-nav svg,
 .navbar-nav img.avatar {
   width: 20px;
@@ -1184,12 +1229,7 @@ thead th {
 .navbar .navbar-brand:focus path,
 .navbar .navbar-brand:active path,
 .navbar a:hover path {
-  fill: #2eccaa;
-}
-
-.navbar .open a path,
-.navbar .open a:hover path {
-  fill: #fff;
+  fill: var(--color-primary);
 }
 
 .btn-link path {
@@ -1252,11 +1292,11 @@ a.red:hover path {
 }
 
 .btn-primary:hover {
-  background-color: #2eccaa;
+  background-color: var(--color-primary);
 }
 
 .btn-info:hover {
-  background-color: #2eccaa;
+  background-color: var(--color-primary);
   color: #fff;
 }
 
@@ -1734,10 +1774,10 @@ a.language:hover {
   white-space: pre-wrap;
   word-wrap: break-word;
   box-sizing: border-box;
-  border: 1px solid #cccccc;
+  border: var(--border);
   border-radius: 4px;
-  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
-  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+  -webkit-box-shadow: inset var(--box-shadow);
+  box-shadow: inset var(--box-shadow);
 }
 .input-group .editor-wrap > textarea,
 .input-group .editor-wrap > .highlighted-output {
@@ -1750,7 +1790,7 @@ a.language:hover {
   position: relative;
   z-index: 1;
   color: transparent;
-  caret-color: black;
+  caret-color: var(--text-color);
   background-color: transparent;
 }
 
@@ -1867,7 +1907,7 @@ a.language:hover {
   border-right: 6px solid transparent;
 }
 .trend-up {
-  border-bottom: 6px solid #2eccaa;
+  border-bottom: 6px solid var(--color-primary);
 }
 .trend-down {
   border-top: 6px solid #f6664c;
@@ -1915,7 +1955,7 @@ a.language:hover {
   min-width: 6px;
 }
 .unit-state-translated {
-  background-color: #2eccaa;
+  background-color: var(--color-primary);
 }
 .unit-state-bad {
   background-color: #f6664c;
@@ -1934,7 +1974,7 @@ a.language:hover {
     background-color: black;
   }
   50% {
-    background-color: #2eccaa;
+    background-color: var(--color-primary);
   }
   100% {
     background-color: black;
@@ -2108,5 +2148,19 @@ tbody.warning {
 
 .dropdown-menu {
   border: none;
+  border-radius: var(--border-radius);
+}
+
+.panel {
+  border: var(--border);
+  overflow: hidden;
+  box-shadow: var(--box-shadow-sm);
+  border-radius: var(--border-radius-md);
+}
+
+.panel-default > .panel-heading {
+  background-color: #e9eaec50;
+}
+.multi-wrapper {
   border-radius: var(--border-radius);
 }
