fix(auth): adjust checks for required 2fa
It now checks based on whether user has it configured instead of looking
at current session. This allows API usage for 2fa enforced projects.

--- a/weblate/templates/base.html
+++ b/weblate/templates/base.html
@@ -340,7 +340,7 @@ var _rollbarConfig = {
   {% show_message 'warning' msg %}
 {% endif %}
 
-{% if user.is_authenticated and not user.is_verified and user.group_enforces_2fa %}
+{% if user.is_authenticated and not user.profile.has_2fa and user.group_enforces_2fa %}
   {% include "snippets/enforced_2fa.html" %}
 {% endif %}
 
