Move search preview to filters instead of search string

--- a/weblate/static/styles/main.css
+++ b/weblate/static/styles/main.css
@@ -2133,6 +2133,7 @@ tbody.warning {
   width: 100%;
   min-height: 40px;
   max-height: 200px;
+  margin-top: -10px;
   background: white;
   padding: 5px;
   border-radius: 4px;
@@ -2157,4 +2158,14 @@ tbody.warning {
 
 #search-preview > #search-result > div {
   margin-left: 10px;
+}
+
+#results-num {
+  font-size: 14px;
+  font-weight: bold;
+  color: #1fa385;
+  text-align: end;
+  position: absolute;
+  right: 0;
+  transform: translate(110%, -3px);
 }
