fix(screnshots): fix screenshot sources ordering

--- a/weblate/templates/screenshots/screenshot_detail.html
+++ b/weblate/templates/screenshots/screenshot_detail.html
@@ -34,7 +34,7 @@
     <h4 class="panel-title">{% trans "Assigned source strings" %}</h4>
   </div>
   <div id="strings-table-container">
-    {% include "screenshots/screenshot_sources_body.html" with sources=objects.units.order %}
+    {% include "screenshots/screenshot_sources_body.html" %}
   </div>
   <div class="panel-footer">
     {% trans "Screenshot is shown to add visual context for all listed source strings." %}
