--- a/weblate/templates/component.html
+++ b/weblate/templates/component.html
@@ -159,7 +159,7 @@
 </div>
 
 <div class="tab-pane" id="information">
-  {% include "snippets/info.html" with project=object.project component=object stats=object.stats metrics=object|metrics show_source=True %}
+  {% show_info project=object.project component=object stats=object.stats metrics=object|metrics show_source=True %}
 </div>
 
 
