--- a/weblate/templates/language-project.html
+++ b/weblate/templates/language-project.html
@@ -86,7 +86,7 @@
 </div>
 
 <div class="tab-pane" id="information">
-  {% include "snippets/info.html" with language=None project=project stats=language_stats metrics=object|metrics %}
+  {% show_info project=project stats=language_stats metrics=object|metrics %}
 </div>
 
 <div class="tab-pane" id="history">
