--- a/weblate/templates/language.html
+++ b/weblate/templates/language.html
@@ -50,7 +50,7 @@
 </div>
 
 <div class="tab-pane" id="information">
-  {% include "snippets/info.html" with language=object stats=object.stats metrics=object|metrics %}
+  {% show_info language=object stats=object.stats metrics=object|metrics %}
 </div>
 
 <div class="tab-pane" id="history">
