--- a/weblate/templates/translation.html
+++ b/weblate/templates/translation.html
@@ -222,7 +222,7 @@
 </div>
 
 <div class="tab-pane" id="information">
-  {% include "snippets/info.html" with project=object.component.project component=object.component translation=object stats=object.stats metrics=object|metrics %}
+  {% show_info project=object.component.project component=object.component translation=object stats=object.stats metrics=object|metrics %}
 </div>
 
 
