--- a/weblate/templates/about/stats.html
+++ b/weblate/templates/about/stats.html
@@ -2,6 +2,7 @@
 {% load i18n %}
 {% load humanize %}
 {% load metrics %}
+{% load translations %}
 
 {% block breadcrumbs %}
 <li><a href="{% url 'about' %}">{% trans "About Weblate" %}</a></li>
@@ -10,6 +11,6 @@
 
 {% block content %}
 
-{% include "snippets/info.html" with metrics=None|metrics show_global=True show_source=True %}
+{% show_info stats=stats metrics=None|metrics show_global=True show_source=True %}
 
 {% endblock %}
