--- a/weblate/templates/category.html
+++ b/weblate/templates/category.html
@@ -101,7 +101,7 @@
 </div>
 
 <div class="tab-pane" id="information">
-  {% include "snippets/info.html" with project=object.project stats=object.stats metrics=object|metrics show_source=True %}
+  {% show_info project=object.project stats=object.stats metrics=object|metrics show_source=True %}
 </div>
 
 <div class="tab-pane" id="languages">
