--- a/weblate/templates/project.html
+++ b/weblate/templates/project.html
@@ -144,7 +144,7 @@
 </div>
 
 <div class="tab-pane" id="information">
-  {% include "snippets/info.html" with project=object stats=object.stats metrics=object|metrics show_source=True %}
+  {% show_info project=object stats=object.stats metrics=object|metrics show_source=True %}
 </div>
 
 <div class="tab-pane" id="languages">
