fix(templates): do not rely on outer scope, get form from field

--- a/weblate/templates/bootstrap3/field.html
+++ b/weblate/templates/bootstrap3/field.html
@@ -15,7 +15,7 @@
         {% if field.label and not field|is_checkbox and form_show_labels %}
             <label for="{{ field.id_for_label }}" class="control-label {{ label_class }}{% if field.field.required %} requiredField{% endif %}">
                 {{ field.label|safe }}{% if field.field.required %}<span class="asteriskField">*</span>{% endif %}
-                {% form_field_doc_link form field %}
+                {% form_field_doc_link field.form field %}
             </label>
         {% endif %}
 
@@ -32,7 +32,7 @@
                 <label for="{{ field.id_for_label }}" class="{% if field.field.required %} requiredField{% endif %}">
                     {% crispy_field field %}
                     {{ field.label|safe }}{% if field.field.required %}<span class="asteriskField">*</span>{% endif %}
-                    {% form_field_doc_link form field %}
+                    {% form_field_doc_link field.form field %}
                 </label>
                 {% include 'bootstrap3/layout/help_text_and_errors.html' %}
             {% else %}
