--- a/weblate/templates/bootstrap3/field.html
+++ b/weblate/templates/bootstrap3/field.html
@@ -13,8 +13,8 @@
     {% endif %}
     <{% if tag %}{{ tag }}{% else %}div{% endif %} id="div_{{ field.auto_id }}" {% if not field|is_checkbox %}class="form-group{% else %}class="checkbox{% endif %}{% if wrapper_class %} {{ wrapper_class }}{% endif %}{% if form_show_errors%}{% if field.errors %} has-error{% endif %}{% endif %}{% if field.css_classes %} {{ field.css_classes }}{% endif %}">
         {% if field.label and not field|is_checkbox and form_show_labels %}
-            <label for="{{ field.id_for_label }}" class="control-label {{ label_class }}{% if field.field.required %} requiredField{% endif %}">
-                {{ field.label|safe }}{% if field.field.required %}<span class="asteriskField">*</span>{% endif %}
+            <label {% if field.id_for_label and not field|is_radioselect %}for="{{ field.id_for_label }}" {% endif %} class="control-label {{ label_class }}{% if field.field.required %} requiredField{% endif %}">
+                {{ field.label }}{% if field.field.required %}<span class="asteriskField">*</span>{% endif %}
                 {% form_field_doc_link field.form field %}
             </label>
         {% endif %}
@@ -28,12 +28,16 @@
         {% endif %}
 
         {% if not field|is_checkboxselectmultiple and not field|is_radioselect %}
-            {% if field|is_checkbox and form_show_labels %}
-                <label for="{{ field.id_for_label }}" class="{% if field.field.required %} requiredField{% endif %}">
+            {% if field|is_checkbox %}
+                {% if form_show_labels %}
+                    <label for="{{ field.id_for_label }}" class="{% if field.field.required %} requiredField{% endif %}">
+                        {% crispy_field field %}
+                        {{ field.label }}{% if field.field.required %}<span class="asteriskField">*</span>{% endif %}
+                        {% form_field_doc_link field.form field %}
+                    </label>
+                {% else %}
                     {% crispy_field field %}
-                    {{ field.label|safe }}{% if field.field.required %}<span class="asteriskField">*</span>{% endif %}
-                    {% form_field_doc_link field.form field %}
-                </label>
+                {% endif %}
                 {% include 'bootstrap3/layout/help_text_and_errors.html' %}
             {% else %}
                 <div class="controls {{ field_class }}">
