fix(billing): base permission check on current billing

--- a/weblate/templates/billing/detail.html
+++ b/weblate/templates/billing/detail.html
@@ -12,7 +12,7 @@
 
 {% block content %}
 
-{% perm 'billing.manage' object as user_can_manage_billing %}
+{% perm 'billing.manage' billing as user_can_manage_billing %}
 
 <div class="row">
 
