Update date range picker styles
- Updated border-color from a dark color to usual border color used in other elements.
- Introduced a new border variable   `--border` for storing the border styles.
- Also added it in `style-dark.css` for the dark theme version

--- a/weblate/static/style-dark.css
+++ b/weblate/static/style-dark.css
@@ -6,6 +6,7 @@
 
 :root {
   color-scheme: only dark;
+  --border: 1px solid #484d50;
 }
 
 /* User-Agent Style */
@@ -2663,6 +2664,7 @@ tbody.warning {
 .daterangepicker {
   color: #d9d3cc;
   background-color: #1a1d1e;
+  border: var(--border);
 }
 
 .daterangepicker:after {
