--- a/weblate/static/styles/main.css
+++ b/weblate/static/styles/main.css
@@ -2110,3 +2110,7 @@ tbody.warning {
   border: none;
   border-radius: var(--border-radius);
 }
+
+.daterangepicker {
+  border: var(--border) !important;
+}
