--- a/weblate/static/styles/variables.css
+++ b/weblate/static/styles/variables.css
@@ -4,9 +4,12 @@
  * SPDX-License-Identifier: GPL-3.0-or-later
  */
 
+/* See style-dark.css for the dark versions */
 :root {
   --border-radius-sm: 2px;
   --border-radius: 4px;
   --border-radius-lg: 10px;
   --border-radius-xl: 20px;
+
+  --border: 1px solid #f2dede;
 }
