Move js script to base.html

--- a/weblate/templates/base.html
+++ b/weblate/templates/base.html
@@ -76,6 +76,7 @@ var _rollbarConfig = {
   <script defer data-cfasync="false" src="{% static 'loader-bootstrap.js' %}{{ cache_param }}"></script>
   <script defer data-cfasync="false" src="{% static 'vendor/moment.js' %}{{ cache_param }}"></script>
   <script defer data-cfasync="false" src="{% static 'vendor/daterangepicker.js' %}{{ cache_param }}"></script>
+  <script defer data-cfasync="false" src="{% static 'js/keyboard-shortcuts.js' %}{{ cache_param }}"></script>
 {% endcompress %}
 
 {% block extra_script %}
