Add separte dark theme  color settings
- Modifed the form to have two color fields (one for dark and one for light theme).
- The colors are stored  in this form"#ffffff,#000000". Where the first one is for light theme and the other for dark theme.
- Then the custom.css consumes the values and performs a split(defined in custom_filters.py) on the color string to get the two colors.
- Those colors then are defined in css variables and consumed by the elements that need them.
- The css variables change base on the current theme (for dark values to be applied it is expected that the body tag has `data-theme="dark"`)

--- a/weblate/static/styles/main.css
+++ b/weblate/static/styles/main.css
@@ -2114,3 +2114,7 @@ tbody.warning {
 .daterangepicker {
   border: var(--border) !important;
 }
+
+#appearance-settings input[type="color"] {
+  width: 50%;
+}
