Add data-theme for body tag

--- a/weblate/templates/base.html
+++ b/weblate/templates/base.html
@@ -108,7 +108,10 @@ var _rollbarConfig = {
 
  </head>
 
- <body {% if LANGUAGE_BIDI %}class="dir-rtl"{% endif %}>
+ <body
+    {% if theme %} data-theme={{theme}} {% endif %}
+    {% if LANGUAGE_BIDI %}class="dir-rtl"{% endif %}
+>
  <div id="popup-alerts"></div>
  <header>
 <nav class="navbar navbar-default navbar-static-top navbar-inverse" role="navigation">
