Add translation context to shot phrases in keyboard-shortcuts.html

--- a/weblate/templates/keyboard-shortcuts.html
+++ b/weblate/templates/keyboard-shortcuts.html
@@ -34,69 +34,69 @@
             <tr>
               <td>
                 <kbd>Alt</kbd> + <kbd>PageUp</kbd> {% translate "or" context "between keyboard shortcuts" %} <br>
-                <kbd>Ctrl</kbd> + <kbd>↑</kbd> {% trans "or" %} <br>
-                <kbd>Alt</kbd> + <kbd>↑</kbd> {% trans "or" %} <br>
-                <kbd>Cmd</kbd> + <kbd>↑</kbd> {% trans "or" %} <br>
+                <kbd>Ctrl</kbd> + <kbd>↑</kbd> {% translate "or" context "between keyboard shortcuts" %} <br>
+                <kbd>Alt</kbd> + <kbd>↑</kbd> {% translate "or" context "between keyboard shortcuts" %} <br>
+                <kbd>Cmd</kbd> + <kbd>↑</kbd> {% translate "or" context "between keyboard shortcuts" %} <br>
               </td>
               <td>{% trans "Navigate to last translation in current search."%}</td>
             </tr>
             <tr>
               <td>
-                <kbd>Alt</kbd> + <kbd>PageDown</kbd> {% trans "or" %} <br>
-                <kbd>Ctrl</kbd> + <kbd>↓</kbd> {% trans "or" %} <br>
-                <kbd>Alt</kbd> + <kbd>↓</kbd> {% trans "or" %} <br>
-                <kbd>Cmd</kbd> + <kbd>↓</kbd> {% trans "or" %} <br>
+                <kbd>Alt</kbd> + <kbd>PageDown</kbd> {% translate "or" context "between keyboard shortcuts" %} <br>
+                <kbd>Ctrl</kbd> + <kbd>↓</kbd> {% translate "or" context "between keyboard shortcuts" %} <br>
+                <kbd>Alt</kbd> + <kbd>↓</kbd> {% translate "or" context "between keyboard shortcuts" %} <br>
+                <kbd>Cmd</kbd> + <kbd>↓</kbd> {% translate "or" context "between keyboard shortcuts" %} <br>
               </td>
               <td>{% trans "Navigate to next translation in current search."%}</td>
             </tr>
 
             <tr>
               <td>
-                <kbd>Ctrl</kbd> + <kbd>Enter</kbd> {% trans "or" %} <br>
+                <kbd>Ctrl</kbd> + <kbd>Enter</kbd> {% translate "or" context "between keyboard shortcuts" %} <br>
                 <kbd>Cmd</kbd> + <kbd>Enter</kbd>
               </td>
               <td>{% trans "Submit current form; this is same as pressing Save and continue while editing translation."%}</td>
             </tr>
             <tr>
               <td>
-                <kbd>Ctrl</kbd> + <kbd>Shift</kbd> + <kbd>Enter</kbd> {% trans "or" %} <br>
+                <kbd>Ctrl</kbd> + <kbd>Shift</kbd> + <kbd>Enter</kbd> {% translate "or" context "between keyboard shortcuts" %} <br>
                 <kbd>Cmd</kbd> + <kbd>Shift</kbd> +<kbd>Enter</kbd>
               </td>
               <td>{% trans "Unmark translation as needing edit and submit it."%}</td>
             </tr>
             <tr>
               <td>
-                <kbd>Alt</kbd> + <kbd>Enter</kbd> {% trans "or" %} <br>
+                <kbd>Alt</kbd> + <kbd>Enter</kbd> {% translate "or" context "between keyboard shortcuts" %} <br>
                 <kbd>Option</kbd> + <kbd>Enter</kbd>
               </td>
               <td>{% trans "Submit the string as a suggestion; this is same as pressing Suggest while editing translation."%}</td>
             </tr>
             <tr>
               <td>
-                <kbd>Ctrl</kbd> + <kbd>E</kbd> {% trans "or" %} <br>
+                <kbd>Ctrl</kbd> + <kbd>E</kbd> {% translate "or" context "between keyboard shortcuts" %} <br>
                 <kbd>Cmd</kbd> + <kbd>E</kbd>
               </td>
               <td>{% trans "Focus translation editor."%}</td>
             </tr>
             <tr>
               <td>
-                <kbd>Ctrl</kbd> + <kbd>U</kbd> {% trans "or" %} <br>
+                <kbd>Ctrl</kbd> + <kbd>U</kbd> {% translate "or" context "between keyboard shortcuts" %} <br>
                 <kbd>Cmd</kbd> + <kbd>U</kbd>
               </td>
               <td>{% trans "Focus comment editor."%}</td>
             </tr>
             <tr>
               <td>
-                <kbd>Ctrl</kbd> + <kbd>M</kbd> {% trans "or" %} <br>
+                <kbd>Ctrl</kbd> + <kbd>M</kbd> {% translate "or" context "between keyboard shortcuts" %} <br>
                 <kbd>Cmd</kbd> + <kbd>M</kbd>
               </td>
               <td>{% trans "Shows Automatic suggestions tab."%}</td>
             </tr>
             <tr>
               <td>
-                <kbd>Ctrl</kbd> + <kbd>1</kbd> {% trans "to" %}
-                <kbd>Ctrl</kbd> + <kbd>9</kbd> {% trans "or" %} <br>
-                <kbd>Cmd</kbd> + <kbd>1</kbd> {% trans "to" %}
+                <kbd>Ctrl</kbd> + <kbd>1</kbd> {% translate "to" context "between keyboard shortcuts" %}
+                <kbd>Ctrl</kbd> + <kbd>9</kbd> {% translate "or" context "between keyboard shortcuts" %} <br>
+                <kbd>Cmd</kbd> + <kbd>1</kbd> {% translate "to" context "between keyboard shortcuts" %}
                 <kbd>Cmd</kbd> + <kbd>9</kbd>
               </td>
               <td>{% trans "Copies placeable of given number from source string."%}</td>
@@ -104,9 +104,9 @@
             <tr>
               <td>
                 <kbd>Ctrl</kbd> + <kbd>M</kbd> {% trans "followed by" %}
-                <kbd>1</kbd> {% trans "to" %} <kbd>9</kbd> {% trans "or" %} <br>
+                <kbd>1</kbd> {% translate "to" context "between keyboard shortcuts" %} <kbd>9</kbd> {% translate "or" context "between keyboard shortcuts" %} <br>
                 <kbd>Cmd</kbd> + <kbd>M</kbd> {% trans "followed by" %}
-                <kbd>1</kbd> {% trans "to" %}
+                <kbd>1</kbd> {% translate "to" context "between keyboard shortcuts" %}
                 <kbd>9</kbd>
               </td>
               <td>{% trans "Copy the machine translation of given number to current translation."%}</td>
@@ -114,37 +114,37 @@
             <tr>
               <td>
                 <kbd>Ctrl</kbd> + <kbd>I</kbd> {% trans "followed by" %}
-                <kbd>1</kbd> {% trans "to" %}
-                <kbd>9</kbd> {% trans "or" %} <br>
+                <kbd>1</kbd> {% translate "to" context "between keyboard shortcuts" %}
+                <kbd>9</kbd> {% translate "or" context "between keyboard shortcuts" %} <br>
                 <kbd>Cmd</kbd> + <kbd>I</kbd> {% trans "followed by" %}
-                <kbd>1</kbd> {% trans "to" %}
+                <kbd>1</kbd> {% translate "to" context "between keyboard shortcuts" %}
                 <kbd>9</kbd>
               </td>
               <td>{% trans "Ignore one item in the list of failing checks."%}</td>
             </tr>
             <tr>
               <td>
-                <kbd>Ctrl</kbd> + <kbd>J</kbd> {% trans "or" %}
+                <kbd>Ctrl</kbd> + <kbd>J</kbd> {% translate "or" context "between keyboard shortcuts" %}
                 <br> <kbd>Cmd</kbd> + <kbd>J</kbd>
               </td>
               <td>{% trans "Shows the Nearby strings tab."%}</td>
             </tr>
             <tr>
               <td>
-                <kbd>Ctrl</kbd> + <kbd>S</kbd> {% trans "or" %}
+                <kbd>Ctrl</kbd> + <kbd>S</kbd> {% translate "or" context "between keyboard shortcuts" %}
                 <br> <kbd>Cmd</kbd> + <kbd>S</kbd>
               </td>
               <td>{% trans "Focus search field."%}</td>
             </tr>
             <tr>
               <td>
-                <kbd>Ctrl</kbd> + <kbd>O</kbd> {% trans "or" %} <br>
+                <kbd>Ctrl</kbd> + <kbd>O</kbd> {% translate "or" context "between keyboard shortcuts" %} <br>
                 <kbd>Cmd</kbd> + <kbd>O</kbd>
               </td>
               <td>{% trans "Copy source string."%}</td>
             </tr>
             <tr>
-              <td><kbd>Ctrl</kbd> + <kbd>Y</kbd> {% trans "or" %}
+              <td><kbd>Ctrl</kbd> + <kbd>Y</kbd> {% translate "or" context "between keyboard shortcuts" %}
                 <br> <kbd>Cmd</kbd> + <kbd>Y</kbd>
               </td>
               <td>{% trans "Toggle the Needs editing checkbox."%}</td>
