docs: document keyboard shortcut changes

--- a/weblate/templates/keyboard-shortcuts.html
+++ b/weblate/templates/keyboard-shortcuts.html
@@ -21,7 +21,7 @@
           <tbody>
             <tr id="shortcut">
               <td><kbd>?</kbd></td>
-              <td>{% trans "Open available keyboard shortcuts"%}</td>
+              <td>{% trans "Open available keyboard shortcuts." %}</td>
             </tr>
             <tr>
               <td><kbd>Alt</kbd> + <kbd>Home</kbd></td>
@@ -76,7 +76,7 @@
                 <kbd>Ctrl</kbd> + <kbd>E</kbd> {% translate "or" context "between keyboard shortcuts" %} <br>
                 <kbd>Cmd</kbd> + <kbd>E</kbd>
               </td>
-              <td>{% trans "Focus translation editor."%}</td>
+              <td>{% trans "Focus on translation editor."%}</td>
             </tr>
             <tr>
               <td>
@@ -141,7 +141,7 @@
                 <kbd>Ctrl</kbd> + <kbd>O</kbd> {% translate "or" context "between keyboard shortcuts" %} <br>
                 <kbd>Cmd</kbd> + <kbd>O</kbd>
               </td>
-              <td>{% trans "Copy source string."%}</td>
+              <td>{% trans "Copy the source string."%}</td>
             </tr>
             <tr>
               <td><kbd>Ctrl</kbd> + <kbd>Y</kbd> {% translate "or" context "between keyboard shortcuts" %}
@@ -151,11 +151,17 @@
             </tr>
             <tr>
               <td>
-                <kbd>→</kbd> and <br> <kbd>←</kbd>
+                <kbd>→</kbd>
               </td>
               <td>
                 {% trans "Browse the next translation string." %}
-                <br>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <kbd>←</kbd>
+              </td>
+              <td>
                 {% trans "Browse the previous translation string."%}
               </td>
             </tr>
