--- a/weblate/static/styles/main.css
+++ b/weblate/static/styles/main.css
@@ -699,13 +699,13 @@ kbd {
   background-color: #f9f9f9;
 }
 
-#position-input-editable {
-  padding: 2px 5px;
+.position-input-editable {
+  padding: 0 !important;
   max-width: 9em;
   display: none;
 }
 
-#position-input-editable input {
+.position-input-editable input {
   height: 31px;
   padding-left: 2px;
   padding-right: 2px;
@@ -713,14 +713,14 @@ kbd {
 }
 
 /* Chrome, Safari, Edge, Opera */
-#position-input-editable input::-webkit-outer-spin-button,
-#position-input-editable input::-webkit-inner-spin-button {
+.position-input-editable input::-webkit-outer-spin-button,
+.position-input-editable input::-webkit-inner-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
 
 /* Firefox */
-#position-input-editable input[type="number"] {
+.position-input-editable input[type="number"] {
   -moz-appearance: textfield;
 }
 
