feat(info): include basic language info in translation/language views
This makes the information about language more visible.

--- a/weblate/templates/language-project.html
+++ b/weblate/templates/language-project.html
@@ -86,7 +86,7 @@
 </div>
 
 <div class="tab-pane" id="information">
-  {% show_info project=project stats=language_stats metrics=object|metrics %}
+  {% show_info project=project language=language stats=language_stats metrics=object|metrics show_full_language=False %}
 </div>
 
 <div class="tab-pane" id="history">
