fix: use consistent timestamp display on addon logs

--- a/weblate/templates/addons/addon_logs.html
+++ b/weblate/templates/addons/addon_logs.html
@@ -51,7 +51,7 @@
               {{ log.get_event_display }}
             </td>
             <td>{{ log.details.result }}</td>
-            <td>{{ log.created|date:"Y-m-d H:i" }}</td>
+            <td>{{ log.created|naturaltime }}</td>
           </tr>
         {% empty %}
           <tr>
